syntax = "proto3";
package authorization;
option go_package = "pb;authorization";

service Authorization {
    rpc CheckAuthz (CheckAuthzMessage) returns (CheckAuthzResponse);
}

message CheckAuthzMessage {
    string user_id = 1;
}

message CheckAuthzResponse {
    bool is_check = 1;
}
